--- a/pages/login.html
+++ b/pages/login.html
@@ -58,11 +58,12 @@
                 <h3 class="text-center">Log In</h3>
                 <form>
                   <div class="text-box">
-                    <input class="input1" type="email" placeholder="Username/email" />
-                    <input class="input2" type="password" placeholder="Password" />
+                    <input type="text" placeholder="Username/email" >
+                    <input type="password" placeholder="Password" >
                   </div>
                   <div class="clearfix"> </div><br />
                   <button class="btn btn-lg btn-primary wow animated fadeInUp center-block" type="submit">Log In</button>
+                  <a href="#" class="pull-right first-content"><small class="text-danger underline">Lupa password?</small></a>
                 </form>
               </div>
             </div>
