--- a/pages/search.html
+++ b/pages/search.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 panelkiri">
-            <h1 class="garisbawah">Filter</h1>
+            <h1 class="garisbawah text-primary">Filter</h1>
             <div class="kategori add-space">
               <h2>Kategori</h2>
               <div class="input-group">
@@ -84,12 +84,6 @@
                 </div>
                 <p class="inline deskrip form-control"><i class="fa fa-book fa-fw"></i> Bacaan sehari-hari</p>
               </div>
-              <!-- <div class="list-group">
-                <p class="inline"><i class="fa fa-book fa-fw"></i> Edukasi</p></span>
-                <p class="inline"><i class="fa fa-money fa-fw"></i> Bisnis</p></span>
-                <p class="inline"><i class="fa fa-fire fa-fw"></i> Komik</p></span>
-                <p class="inline"><i class="fa fa-book fa-fw"></i> Bacaan sehari-hari</p></span>
-              </div> -->
             </div>
             <div class="range">
               <h2>Range harga</h2>
@@ -111,10 +105,10 @@
               </div>
             </div>
             <div class="col-md-12 add-space first-content no-padding">
-              <button type="submit" class="btn btn-primary" name="tag">Apply</button>
+              <button type="submit" class="btn btn-default" name="tag">Apply</button>
             </div>
             <div class="promoted first-content">
-              <h1 class="garisbawah no-margin">Rekomendasi</h1>
+              <h1 class="garisbawah no-margin text-primary">Rekomendasi</h1>
               <a href="#">
                 <div class="media">
                   <div class="media-body garisbawah">
